--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
       </article>
     </div>
     <footer class="center"><a class="btn" href="#">Rhoncus mi congue &raquo;</a></footer>
+    <button onclick="topFunction()" id="scrollBtn" title="retour en haut" >Aller en haut ^</button>
   </section>
 </div>
 <div class="wrapper row2 bgded overlay" style="background-image:url('images/demo/backgrounds/background.jpg');">
@@ -327,5 +328,7 @@
   </div>
 </div>
 <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
-</body>
+<script type="text/javascript" src="main.js">
+
+</script>
 </html>
